<resources>
    <string name="app_name">minerguide</string>
    <string name="facebook_app_id">555244347948254</string>

    <string name="gcm_project_number">976246165656</string>
    <string name="gcm_project_key">AIzaSyDDF7GrgwgVkuzf0ODZuZe1ILln4HGQKMg</string>

    <string name="fb_btn_login">Sign in with Facebook</string>
    <string name="gp_btn_login">Sign in with Google</string>
    <!-- Chat -->
    <string name="server_registering">server registering</string>
    <string name="server_registered">server_registered</string>
    <string name="server_register_error">server_register_error</string>
    <string name="server_unregistered">server_unregistered</string>
    <string name="server_unregister_error">server_unregister_error</string>

    <string name="login_activity_info_text">We do not post anything to Facebook or google plus</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="spinner_all">All</string>

    <!--ic_drawer-->
    <string name="ic_drawer_home">Home</string>
    <string name="ic_drawer_all">All</string>
    <string name="ic_drawer_achievements">Achievements</string>
    <string name="ic_drawer_biomes">Biomes</string>
    <string name="ic_drawer_structures">Structures</string>
    <string name="ic_drawer_blocks">Blocks &amp; Items</string>
    <string name="ic_drawer_mobs">Mobs</string>
    <string name="ic_drawer_potions">Potions</string>
    <string name="ic_drawer_redstone">Redstone Circuits</string>
    <string name="ic_drawer_commands">Commands</string>
    <string name="ic_drawer_settings">Settings</string>
    <string name="ic_drawer_favorites">Favorites</string>
    <string name="ic_drawer_chat">Chat</string>
    <string name="ic_drawer_movies">Training Movies</string>

    <!-- /ic_drawer-->

    <string name="chat_btn_send">Send</string>

    <!-- Dialog  -->
    <string name="dialog_ok">Ok</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <!-- Settings -->
    <string name="basic_setting_category">Basic settings</string>

    <string name="user_logout_preference">Log Out</string>
    <string name="user_logout_preference_summary">Log out current user</string>
    <string name="user_logout_clear_data">Clear user data?</string>
    <string name="user_logout_clear_data_summary">You will have to re-connect your account.</string>


    <string name="notification_category">Notifications</string>

    <string name="notification_chat">Chat Message</string>
    <string name="notification_chat_summary">Notify when new chat message received.</string>
    <string name="notification_add_new_movies">Movies updated</string>
    <string name="notification_add_new_movies_summary">Notify when app update movies.</string>



    <string name="app_details_category">App Details</string>
    <string name="app_details_rate_app">Rate this app</string>
    <string name="app_details_rate_app_summary">It would be great if you took a moment to rate it.</string>
    <string name="app_details_version_name">Version</string>
    <string name="app_details_version_number">1.01-release</string>

    <!-- End Settings -->

    <string name="original_category">Original Category</string>
    <string name="original_preference">Original Preference</string>
    <string name="original_checkbox_preference">Original CheckBox Preference</string>
    <string name="original_summary">Original Summary</string>
    <string name="original_summary_with_icon">Original Summary + Icon</string>
    <string name="original_checkbox_key">original_checkbox_key</string>
    <string name="original_checkbox_summary_on">Original CheckBox Summary On</string>
    <string name="original_checkbox_summary_off">Original CheckBox Summary Off</string>
    <string name="original_switch_preference">Original Switch Preference</string>
    <string name="original_switch_preference_on">Original Switch Summary On</string>
    <string name="original_switch_preference_off">Original Switch Summary Off</string>

    <string name="material_category">Material Category</string>
    <string name="material_preference">Material Preference</string>
    <string name="material_checkbox_preference">Material CheckBox Preference</string>
    <string name="material_summary">Material Summary</string>
    <string name="material_summary_with_icon">Material Summary + Icon</string>
    <string name="material_checkbox_key">material_checkbox_key</string>
    <string name="material_checkbox_summary_on">Material CheckBox Summary On</string>
    <string name="material_checkbox_summary_off">Material CheckBox Summary Off</string>
    <string name="material_switch_preference">Material Switch Preference</string>
    <string name="material_switch_preference_on">Material Switch Summary On</string>
    <string name="material_switch_preference_off">Material Switch Summary Off</string>




</resources>
